--- a/DB/DB_Csh/DB_Csh/MainWindow.xaml
+++ b/DB/DB_Csh/DB_Csh/MainWindow.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Label Content="Enter name" HorizontalAlignment="Left" Margin="67,64,0,0" VerticalAlignment="Top" Height="44" Width="128" FontSize="20" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" OpacityMask="Black" Background="#FFD8C5C5" BorderBrush="Black"/>
+        <TextBox HorizontalAlignment="Left" Margin="238,64,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" FontSize="22"/>
+        <Button x:Name="Safe" Content="Safe" HorizontalAlignment="Left" Margin="67,173,0,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" Click="EnterName_Click" Width="128" Height="44"/>
 
     </Grid>
 </Window>
